Revision history for Database-Abstraction

0.13
	Refactor logger helper routines
	Fix "Bad table or column name: 'entryIS NOT NULL' has chars not alphanumeric or underscore"

0.12	Wed Dec  4 08:19:09 EST 2024
	Move the synopsis document around for clarity
	Allow the logger to be a ref to code

0.11	Thu Nov  7 10:44:24 EST 2024
	Added id parameter
	Slurp small XML files using XML::Simple
	Fix uninitialised error when slurp_file doesn't exist
	Use features of File::pfopen version 0.03

0.10	Thu Sep 19 08:17:55 EDT 2024
	Added t/init.t
	The constructor now honours 'sep_char'
	Test no_entry files
	Added CircleCI and Codecov

0.09	Mon Jun 24 20:42:48 EDT 2024
	Added t/chi.t
	selectall_hash: speed up slurp mode when 'entry' is one of the parameters
	execute: add the table name to the query

0.08	Mon May 20 08:43:08 EDT 2024
	Add unique as a synonym for distinct
	Allow max_slurp_size to be tweaked
	Fix CSV search on a column other than the keyed column
	Added t/error.t
	Catch undefined arguments in fetchrow_hashref

0.07	Fri Feb 23 08:02:24 EST 2024
	selectall_hash: Fixed "Not an ARRAY reference"

0.06	Tue Feb 20 16:55:33 EST 2024
	Slurped data - improve keying
	fetchrow_hashref now uses slurped data on some optimised places
	fetchrow_hashref: fixed uninitialized variable in logger
	fetchrow_hashref: more verbose debugging on match
	AUTOLOAD: usage error if entry isn't a column
	AUTOLOAD: fix problem when no args are given on slurped data

0.05	Fri Feb  9 11:01:00 EST 2024
	Fix https://www.cpantesters.org/cpan/report/f07e90f2-c264-11ee-bb2d-64236e8775ea
	init() will now return the current defaults
	Ensure that the default cache_duration is 1 hour

0.04	Fri Feb  2 13:14:18 EST 2024
	init() can now be called more than once and will retain the old values
	Added XML test
	Restrict the size of the CSV file that are slurped to 16K

0.03	Thu Feb  1 13:48:01 EST 2024
	Complain if the directory argument isn't a directory
	Put the values from init() into a hash