@@ -14,6 +14,7 @@ README.md
 t/00-load.t
 t/10-compile.t
 t/20-new.t
+t/30-basics.t
 t/chi.t
 t/comment-spelling.t
 t/csv.t
