@@ -3,6 +3,7 @@ Revision history for Database-Abstraction
 0.13
 	Refactor logger helper routines
 	Fix "Bad table or column name: 'entryIS NOT NULL' has chars not alphanumeric or underscore"
+	Added t/30-basics.t
 
 0.12	Wed Dec  4 08:19:09 EST 2024
 	Move the synopsis document around for clarity
